[package]
name = "serum-saver"
version = "0.1.0"
description = "Serum fee saver"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_saver"
doctest = false

[features]
devnet = ["anchor-lang/anchor-debug"]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["no-idl"]

[dependencies]
anchor-lang = "=0.16.2"
serum_dex = { git = "https://github.com/project-serum/serum-dex", rev = "1be91f2", features = ["no-entrypoint"] } # 0.4.0
solana-program = "=1.7.11"
spl-associated-token-account = { version = "=1.0", features = ["no-entrypoint"] }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
derivative = "2.2.0"
futures = "0.3.17"
hex = "0.4.3"
lazy_static = "1.4.0"
rand_chacha = "0.3"
rand_chacha02 = { package = "rand_chacha", version = "0.2" } # ed25519_dalek in solana_sdk use old rand
solana-logger = "=1.7.11"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
spl-token-client = { git = "https://github.com/fanatid/solana-program-library.git", rev = "0782144f" } # branch: rust-spl-token-api
